fix: bg education mobile

--- a/containers/sections/section.module.scss
+++ b/containers/sections/section.module.scss
@@ -6,6 +6,11 @@
     background-size: 20%, 10%;
     background-position: 80% 85%, 90% 45%;
 }
+.Section_education_mobile {
+    background-repeat: no-repeat;
+    background-size: 50%, 20%;
+    background-position: 0% 85%, 80% 75%;
+}
 
 .Section_portofolio {
     background-image: url(/home/bg-porto.png), linear-gradient(289deg, rgba(253, 119, 2, 1) 0%, rgba(255, 187, 0, 1) 100%);
